--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
 	position: relative;
 	text-align: center;
 	display: table;
-	color: #C0C0C0;
+	color: #FF00FF;
 	z-index: 0;
 }
 .header .hd {
