--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 	margin: 0 auto;
 }
 .header {
-	background: #000 url(../img/7.jpg) center center no-repeat;
+	background: #000 url(../img/zma1.png) center center no-repeat;
 	height: 100vh;
 	width: 100%;
 	position: relative;
