--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
 }
 .header {
 	background: #000 url(../img/zma2.png) center center no-repeat;
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 	position: relative;
 	text-align: center;
