--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 	margin: 0 auto;
 }
 .header {
-	background: #000 url(../img/zma2.png) center center no-repeat;
+	background: #000 url(../img/zma2.png) no-repeat center center fixed;
 	height: 100vh;
 	width: 100%;
 	position: relative;
@@ -67,9 +67,11 @@ body {
 	width: 50rem;
 }
 .port {
-	height: 150vh;
-	width: 100%;
 	background-color: #242424;
+	height: 100%;
+	width: 100%;
+	position: relative;
+	display: table;
 }
 .port h1 {
 	text-align: center;
