--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 	margin: 0 auto;
 }
 .header {
-	background: #000 url(../img/zma2.png) no-repeat center center fixed;
+	background: #000 url(../img/zma2.png) no-repeat center center;
 	height: 100vh;
 	width: 100%;
 	position: relative;
@@ -131,36 +131,4 @@ body {
 .zakaz .but:hover {
 	background-color: #000;
 	color: #666;
-}
-.footer {
-	height: 100vh;
-	width: 100%;
-	background-color: #242424;
-}
-.footer h1 {
-	text-align: center;
-	color: #fff;
-	font-size: 4rem;
-}
-.footer .text p {
-	font-size: 2rem;
-	color: #fff;
-}
-.footer .text a {
-	text-decoration: none;
-	font-size: 1.5rem;
-	color:#007000;
-}
-.footer .text a:hover {
-	text-decoration: underline;
-	color: #fff;
-}
-.footer .social-links {
-	font-size: 3rem;
-}
-.footer .social-links i{
-	color: #fff;
-}
-.footer .social-links i:hover{
-	color: #007000;
 }
