--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 	margin: 0 auto;
 }
 .header {
-	background: #000 url(../img/zma2.png);
+	background: #000 url(../img/zma2.png) static;
 	height: 100vh;
 	width: 100%;
 	position: relative;
