--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 	margin: 0 auto;
 }
 .header {
-	background: #000 url(../img/zma2.png) fixed;
+	background: #000 url(../img/zma2.png) no-repeat center center;
 	height: 100vh;
 	width: 100%;
 	position: relative;
@@ -13,8 +13,6 @@ body {
 	color: #FF00FF;
 	z-index: 0;
         background-size: cover;
-	background-repeat: no-repeat;
-        background-position: center;
 }
 .header .hd {
 	display:table-cell;
