--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
 	position: relative;
 	text-align: center;
 	display: table;
-	color: #DFD7D7;
+	color: #000;
 	z-index: 0;
         background-size: cover;
 }
